<resources>
    <string name="app_name">GuiaSS</string>
    <string name="title">Guia Servicio Social</string>
    <string name="title_Desc">Aplicacion de ayuda</string>
    <string name="img_logoDesc">image top</string>
    <string name="txt_req">Requisitos Previos</string>
    <string name="txt_dss">Datos del ss</string>
    <string name="txt_pp">Primeros pasos</string>
    <string name="txt_dh">¿Donde Realizarlo?</string>
    <string name="txt_ps">Pasos siguientes</string>
    <string name="infoDesc">N/A</string>
    <string name="infoTitle">N/A</string>
    <string name="title_activity_login">Iniciar sesion</string>
    <string name="registry">Registro</string>
    <string name="invited">Invitado</string>
    <string name="more_info">Ver mas</string>

    <!-- Strings related to login -->
    <string name="prompt_email">No. Control/No. de Empleado</string>
    <string name="prompt_password">Clave</string>
    <string name="action_sign_in">Iniciar sesion</string>
    <string name="action_sign_up">Registrarse</string>
    <string name="action_sign_in_short">Iniciar sesion</string>
    <string name="error_invalid_control">El numero de control es incorrecto</string>
    <string name="error_invalid_password">La contraseña es demaciado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- String add students-->
    <string name="prompt_nombre">Nombre completo</string>
    <string name="prompt_controlnumber">Número de control</string>
    <string name="prompt_email_student">Correo</string>
    <string name="prompt_key">Contraseña</string>
    <string name="prompt_rep_key">Confirmar contraseña</string>
    <!-- -->
    <string name="title_activity_datos_generales">DatosGenerales</string>
    <string name="title_activity_donde_realizar">DondeRealizar</string>
    <string name="title_activity_proceso_pasoa_paso">ProcesoPasoaPaso</string>
    <string name="title_activity_pasos_siguientes">PasosSiguientes</string>
    <string name="title_activity_reportes">Reportes</string>
    <string name="title_activity_plandetrabajo">Plandetrabajo</string>
    <string name="title_activity_paso_final">PasoFinal</string>
    <string name="title_activity_previous_requirements">PreviousRequirements</string>
    <string name="title_activity_teacher_interface">TeacherInterface</string>
    <string name="button">50dp</string>
    <string name="title_activity_menu_slite">MenuSliteActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Maestro</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_student">Alumno</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
