<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/img_logoDesc"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="127dp"
        android:layout_height="18dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/title"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_titleDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/title_Desc"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="386dp"
        android:layout_height="465dp"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_scrollMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_req"
                    android:layout_width="287dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_req"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_req"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ver mas" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_dss"
                    android:layout_width="287dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_dss"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_dss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ver mas" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_pp"
                    android:layout_width="287dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_pp"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_pp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ver mas" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_dh"
                    android:layout_width="287dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_dh"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_dh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ver mas" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_ps"
                    android:layout_width="287dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_ps"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_ps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ver mas" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>